--- a/com-gabhasti-product-customer/src/main/resources/application.properties
+++ b/com-gabhasti-product-customer/src/main/resources/application.properties
@@ -2,12 +2,12 @@ server.servlet.context-path=/api
 server.port=8081
 
 #datasource config
-#spring.datasource.url=jdbc:postgresql://192.168.39.133:30432/gabhasti
-spring.datasource.url=jdbc:postgresql://postgres.dev:5432/gabhasti
+spring.datasource.url=jdbc:postgresql://192.168.39.133:30432/gabhasti
+#spring.datasource.url=jdbc:postgresql://postgres.dev:5432/gabhasti
 spring.datasource.username=devgabhasti
 spring.datasource.password=devgabhasti
 spring.datasource.driverClassName=org.postgresql.Driver
-
+#spring.datasource.schema=gabhasti
 #JPA - Hibernate
 #spring.jpa.database=postgresql
 #spring.jpa.generate-ddl=true
