--- a/com-gabhasti-product-customer/Dockerfile
+++ b/com-gabhasti-product-customer/Dockerfile
@@ -4,7 +4,9 @@ MAINTAINER Marsh Dsilva , dsilvamarsh@gmail.com
 
 ARG JAR_FILE=target/*.jar 
 
+WORKDIR /app
+
 COPY ${JAR_FILE} com-gabhasti-product-customer.jar
 
-ENTRYPOINT ["java", "-jar" , "/com-gabhasti-product-customer.jar"]
+ENTRYPOINT ["java", "-jar" , "com-gabhasti-product-customer.jar"]
 
